[project]
name = "rlm"
version = "0.2.0"
description = "A Python framework for processing extremely long contexts using recursive language model decomposition"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "xai-sdk>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
